# documentation

./: genindex.html  pyproject.toml  requirements.txt  search.html
.github/workflows/: build-docs.yaml
Doc/: conf.py
Doc/source/: conf.py
docs/: conf.py  index.rts
docs/source/: conf.py
master/: .buildinfo  genindex.html  search.html
master/.doctrees/: environment.pickle  index.doctree
v1.0.0/: .buildinfo  objects.inv
v1.0.0/.doctrees/: environment.pickle  index.doctree
v1.0.24/: .buildinfo  changelog.html  genindex.html  index.html  install.html  searchindex.js
v1.0.24/.doctrees/: changelog.doctree  environment.pickle  guide.doctree  index.doctree  install.doctree
v1.0.25/v1.0.25/: .buildinfo  guide.html  objects.inv  search.html
v1.0.27/v1.0.27/: .buildinfo
v1.1.0/: .buildinfo
v1.1.0/.doctrees/: environment.pickle  index.doctree
v1.3.0/: .buildinfo
v1.3.0/.doctrees/: environment.pickle  index.doctree
v1.4.0/: .buildinfo  index.html  searchindex.js
v1.4.0/.doctrees/: environment.pickle  index.doctree
v1.5.0/: .buildinfo  searchindex.js
v1.5.0/.doctrees/: environment.pickle  index.doctree
v1.6.0/: .buildinfo
v1.6.0/.doctrees/: changelog.doctree  environment.pickle  guide.doctree  index.doctree  install.doctree
v1.7.0/: .buildinfo  index.html
v1.7.0/.doctrees/: changelog.doctree  environment.pickle  guide.doctree  index.doctree  install.doctree
v1.8.0/: .buildinfo  objects.inv  searchindex.js
v1.8.0/.doctrees/: changelog.doctree  environment.pickle  (+3 more)
v1.9.0/: .buildinfo  changelog.html  guide.html  install.html
(+16 files in other folders)
